--- a/Css/exercici.css
+++ b/Css/exercici.css
@@ -1,42 +1,41 @@
-*{
-    margin:0;
-    padding: 0;
-}
-
+body{width: 1200px;
+    }
 header{
         border-color: black;
-        border-top: 20px;
-        border-right: 20px;
-        border-left: 20px;
+        border-top: 15px;
+        border-right: 15px;
+        border-left: 15px;
         border-bottom: 10px;
         border-style:solid;
-
     }
+   
 .fondo-azul {
-        background-color:cadetblue;
-        height: 50px;
+        background-color: #27394e;
         margin:0;
-        padding: 0;
-    }
+        padding: 10;
+}
+
 header div{
     margin:20px auto 20px auto;
     display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;     
-    border-color: cadetblue;
-    border-width: 20px;
+    border-color: #27394e;
+    border-width: 15px;
 }
+
 .subtitulo {
     border-color: black;
-    border-right: 20px;
-    border-left: 20px;
-    border-bottom: 20px;
+    border-right: 15px;
+    border-left: 15px;
+    border-bottom: 15px;
     border-top: 0;
     border-style:solid;
+    margin-bottom: 10px;
 }
-.fondo-verde {
-    background-color:greenyellow;
-    height: 50px;
+
+.fondo-naranja {
+    background-color: #f0763a;
     padding: 10px;
     text-align: left;
     text-justify: distribute;
@@ -45,80 +44,123 @@ header div{
 body{
     background-color: white;
 }
+/*Caja del cuerpo*/
+
 .contenedor {
 	border-color: black;
-    border: 20px;
+    border-top: 15px;
+    border-right: 15px;
+    border-left: 15px;
+    border-bottom: 15px;
     border-style:solid;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: left;
-    display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-    background-color: greenyellow;
-    
-  }
-.contenedor p{
-    padding-left: 10px;
-    padding-top: 20px;
+    background-color:#44465e;
+    display: flex;   
 }
 
+
 .boxleft{
-    display: flex;
-	flex-wrap: wrap;     
-    background-color: greenyellow;
-    display: flex;
-	flex-wrap: wrap;
-    flex-direction: column;
-	justify-content: space-around;
-    text-align: left;
+    background-color: #44465e;
+    margin: 0px;
     padding: 10px;
-    }
-ul li{
-    list-style: none;
-	display: inline-block;
-	text-align: auto;
-    padding: 10px;
-    
-}
-.boxright{
-    display: flex;
-	flex-wrap: wrap;     
-    background-color: greenyellow;
-    display: flex;
-	flex-wrap: wrap;
-    flex-direction: column;
-	justify-content: space-around;
-    text-align: left;
-    padding: 0 10px;
-}
-.boxbottom{
-   padding:10px;
-   background-color: greenyellow;
-    
-}
-.anuncio{
+    width: 600px;
     border-color: black;
-    border-right: 0;
-    border-left: 10px;
-    border-bottom: 0;
     border-top: 0;
+    border-right: 0px;
+    border-left: 0px;
+    border-bottom: 0;
     border-style:solid;
-    background-color: blueviolet;    
-    display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center; 
-    width: 400px;
-        }
+}
+
+.anuncio{
+    background-color: #f94c47;
+    margin: 0px;
+    padding: 10px;
+    width: 600px;
+    border-color: black;
+    border-top: 0;
+    border-right: 0;
+    border-left: 15px;
+    border-bottom: 0;
+    border-style:solid;
+}
 
 .footer {
     border-color: black;
-    border-right: 20px;
-    border-left: 20px;
-    border-bottom: 20px;
-    border-top: 20px;
-    padding: 4px 10px 4px 10px;
+    border-top: 15px;
+    border-right: 15px;
+    border-left: 15px;
+    border-bottom: 10px;
     border-style:solid;
-    background-color:greenyellow;
+    padding: 4px 10px 4px 10px;
+    background-color:#e4a434;
+    margin-top: 10px;
 }
+
+/* RESPONSIVE*/
+
+@media only screen and (max-width: 1024px){
+    body{
+        width: auto;
+    }
+    .contenedor {
+        border-color:yellow;
+        display: flex;
+	    flex-direction:column;
+	    justify-content: center;
+    }
+    .boxleft{
+        display: flex;
+	    padding: 10px;
+        margin-bottom: 20px;
+        border-color:yellow;
+        border-top: 0px;
+        border-right: 0px;
+        border-left: 0px;
+        border-bottom: 0px;
+        border-style:solid;
+    }
+    .anuncio{
+        border-top: 10px;
+        border-color:yellow;
+        border-right: 0px;
+        border-left: 0px;
+        border-bottom: 0px;
+        border-style:solid;
+        width: auto;
+    }
+    
+
+@media only screen and (max-width: 576px){
+	body{
+        width: auto;
+    }
+    header div{
+        display: flex;
+        flex-direction:column;
+	    justify-content: center;
+    }
+    .contenedor {
+        border-color: yellow;
+    }
+
+    .boxleft{
+        display: inline;
+	    width: auto; 
+        margin: 0px;
+        margin-bottom: 0px;
+        padding-left: 10px;
+             
+    }
+    .column{
+        margin: 0px;
+        padding: 0px;
+    }    
+    .anuncio{
+        margin-top: 20px;
+        border-color:yellow;
+        border-style:solid;
+        border-right: 0px;
+        border-left: 0px;
+        border-bottom: 0px;
+        padding: 10px;   
+    }
